crates/ruff_python_parser/tests/snapshots/invalid_syntax@ann_assign_stmt_missing_rhs.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/ann_assign_stmt_missing_rhs.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..9,
        body: Suite {
            range: 0..9,
            node_index: NodeIndex(None),
            statements: [
                AnnAssign(
                    StmtAnnAssign {
                        node_index: NodeIndex(None),
                        range: 0..8,
                        target: Name(
                            ExprName {
                                node_index: NodeIndex(None),
                                range: 0..1,
                                id: Name("x"),
                                ctx: Store,
                            },
                        ),
                        annotation: Name(
                            ExprName {
                                node_index: NodeIndex(None),
                                range: 3..6,
                                id: Name("int"),
                                ctx: Load,
                            },
                        ),
                        value: None,
                        simple: true,
                    },
                ),
            ],
        },
    },
)
```
## Errors

  |
1 | x: int =
  |         ^ Syntax Error: Expected an expression
  |
