crates/ruff_python_parser/tests/snapshots/invalid_syntax@assert_empty_msg.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/assert_empty_msg.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..10,
        body: Suite {
            range: 0..10,
            node_index: NodeIndex(None),
            statements: [
                Assert(
                    StmtAssert {
                        node_index: NodeIndex(None),
                        range: 0..9,
                        test: Name(
                            ExprName {
                                node_index: NodeIndex(None),
                                range: 7..8,
                                id: Name("x"),
                                ctx: Load,
                            },
                        ),
                        msg: None,
                    },
                ),
            ],
        },
    },
)
```
## Errors

  |
1 | assert x,
  |          ^ Syntax Error: Expected an expression
  |
